loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-service
spec:
  type: LoadBalancer
  selector:
    app: svc-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
