ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authors-service
            port:
              number: 80
      - path: /authors/
        pathType: Prefix
        backend:
          service:
            name: authors-service
            port:
              number: 80
      - path: /books/
        pathType: Prefix
        backend:
          service:
            name: books-service
            port:
              number: 80
